classDiagram
    class ProfitShareCache {
        +u16 batch_id
        +[u8; 15] investment_id
        +[u8; 4] version
        +u64 subtotal_profit_usdt
        +u64 subtotal_estimate_sol
        +i64 executed_at
        +i64 created_at
        +Vec~ProfitEntry~ entries
        +validate_execution()
        +calculate_estimates()
    }

    class ProfitEntry {
        +[u8; 15] account_id
        +Pubkey wallet
        +u64 amount_usdt
        +u16 ratio_bp
        +Pubkey recipient_ata
        +validate_ratio()
        +get_ata_address()
    }

    class InvestmentInfo {
        +[u8; 15] investment_id
        +[u8; 4] version
        +InvestmentType investment_type
        +[[u8; 10]; 3] stage_ratio
        +i64 start_at
        +i64 end_at
        +u64 investment_upper_limit
        +Vec~Pubkey~ execute_whitelist
        +Vec~Pubkey~ update_whitelist
        +Vec~Pubkey~ withdraw_whitelist
        +Pubkey vault
        +InvestmentState state
        +bool is_active
        +i64 created_at
        +validate_stage_ratio()
        +verify_signers_3_of_5()
    }

    class InvestmentType {
        <<enumeration>>
        Standard = 0
        Csr = 1
    }

    class InvestmentState {
        <<enumeration>>
        Init = 0
        Pending = 1
        Completed = 999
    }

    ProfitShareCache --> ProfitEntry
    ProfitShareCache --> InvestmentInfo
    InvestmentInfo --> InvestmentType
    InvestmentInfo --> InvestmentState

    note for ProfitShareCache "PDA seeds: profit_cache, investment_id, version, batch_id"
    note for ProfitEntry "Entry size: 89 bytes, Max entries per batch: 30"
    note for ProfitShareCache "Total size: 1845 bytes, Base size: 65 bytes" 